syntax = "proto3";

package matching_engine;

// Order service definition
service OrderService {
  // Place a new order (limit, market, or IOC)
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
  
  // Cancel an existing order
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
  
  // Get order status
  rpc OrderStatus(OrderStatusRequest) returns (OrderStatusResponse);
  
  // Get orderbook snapshot
  rpc Snapshot(SnapshotRequest) returns (SnapshotResponse);
  
  // Stream orderbook updates
  rpc StreamUpdates(StreamUpdatesRequest) returns (stream OrderbookUpdate);
}

// Order types
enum OrderType {
  LIMIT = 0;
  MARKET = 1;
  IOC = 2;  // Immediate or Cancel
}

enum OrderSide {
  BUY = 0;
  SELL = 1;
}

enum OrderStatus {
  PENDING = 0;
  PARTIALLY_FILLED = 1;
  FILLED = 2;
  CANCELLED = 3;
  REJECTED = 4;
}

// Place order request
message PlaceOrderRequest {
  string order_id = 1;        // Unique order ID (UUID)
  string market_id = 2;        // Market identifier
  OrderSide side = 3;          // BUY or SELL
  OrderType order_type = 4;    // LIMIT, MARKET, or IOC
  string price = 5;            // Price (as decimal string, empty for market orders)
  string quantity = 6;         // Quantity (as decimal string)
  string user_id = 7;          // User identifier
  int64 timestamp_ns = 8;      // Client timestamp (nanoseconds since epoch)
}

// Place order response
message PlaceOrderResponse {
  string order_id = 1;
  OrderStatus status = 2;
  repeated Trade trades = 3;   // Trades executed immediately
  string remaining_quantity = 4; // Remaining quantity if partially filled
  int64 sequence_number = 5;   // Event sequence number
}

// Cancel order request
message CancelOrderRequest {
  string order_id = 1;
  string market_id = 2;
  string user_id = 3;
}

// Cancel order response
message CancelOrderResponse {
  string order_id = 1;
  bool success = 2;
  string message = 3;
  int64 sequence_number = 4;
}

// Order status request
message OrderStatusRequest {
  string order_id = 1;
  string market_id = 2;
}

// Order status response
message OrderStatusResponse {
  string order_id = 1;
  OrderStatus status = 2;
  string remaining_quantity = 3;
  string filled_quantity = 4;
  string average_fill_price = 5;
  repeated Trade trades = 6;
}

// Snapshot request
message SnapshotRequest {
  string market_id = 1;
}

// Snapshot response
message SnapshotResponse {
  string market_id = 1;
  int64 sequence_number = 2;
  repeated OrderLevel bids = 3;
  repeated OrderLevel asks = 4;
  int64 timestamp_ns = 5;
}

// Order level (price level in orderbook)
message OrderLevel {
  string price = 1;
  string total_quantity = 2;
  int32 order_count = 3;
}

// Trade execution
message Trade {
  string trade_id = 1;
  string order_id = 2;
  string market_id = 3;
  OrderSide side = 4;
  string price = 5;
  string quantity = 6;
  int64 timestamp_ns = 7;
  int64 sequence_number = 8;
  string taker_order_id = 9;
  string maker_order_id = 10;
}

// Orderbook update stream
message StreamUpdatesRequest {
  string market_id = 1;
}

message OrderbookUpdate {
  int64 sequence_number = 1;
  string market_id = 2;
  oneof update {
    Trade trade = 3;
    OrderPlaced order_placed = 4;
    OrderCancelled order_cancelled = 5;
  }
  int64 timestamp_ns = 6;
}

message OrderPlaced {
  string order_id = 1;
  OrderSide side = 2;
  string price = 3;
  string quantity = 4;
}

message OrderCancelled {
  string order_id = 1;
  OrderSide side = 2;
  string price = 3;
  string cancelled_quantity = 4;
}

